Fixed OverflowY Attempt:2

--- a/christmas.css
+++ b/christmas.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 body {
+    background-color: purple;
+}
+.wrapper {
     background: radial-gradient(circle, violet 0%, violet 25%, purple 60%, purple 100%);
     height: 100vh;
     display: grid;
     place-items: center;
-    overflow-y: scroll;
 }
 .box {
     position: relative;
@@ -323,6 +325,7 @@ body {
 }
 
 .BunnyImage {
+    background-color: #00000000;
     position: absolute;
     top: 50%;
     left: 50%;
